# pgtop

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  config.example.toml  dist-workspace.toml  docker-compose.yml  flake.nix
.cargo-husky/hooks/: pre-commit
.claude/skills/rust-tui/: SKILL.md
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: ROADMAP.md  demo.tape
scripts/: load.sh
src/: actions.rs  app.rs  collectors.rs  config.rs  db.rs  diff.rs  easter_egg.rs  explain.rs  export.rs  main.rs  messages.rs  persist.rs  replay.rs  snapshot_tests.rs  theme.rs  ui.rs
src/app/: connection.rs  mod.rs  tab.rs
src/collectors/: activity.rs  databases.rs  locks.rs  mod.rs  replication.rs  stats.rs  tables.rs  top_queries.rs
src/snapshots/: pgtop__snapshot_tests__activity_tab_empty.snap  pgtop__snapshot_tests__activity_tab_with_three_backends.snap  pgtop__snapshot_tests__confirm_terminate_popup_partial_typing.snap  pgtop__snapshot_tests__databases_tab.snap  pgtop__snapshot_tests__detail_popup.snap  pgtop__snapshot_tests__locks_tab_with_blocking_pair.snap  pgtop__snapshot_tests__replay_indicator_in_title_bar.snap  pgtop__snapshot_tests__replication_tab_with_two_replicas.snap  pgtop__snapshot_tests__tables_tab.snap  pgtop__snapshot_tests__top_queries_tab_available.snap  pgtop__snapshot_tests__top_queries_tab_extension_missing.snap  pgtop__snapshot_tests__waits_tab_with_aggregated_rows.snap
src/views/: activity.rs  databases.rs  locks.rs  mod.rs  replication.rs  tables.rs  top_queries.rs  waits.rs
src/widgets/: confirm.rs  detail.rs  explain.rs  filter_line.rs  footer.rs  mod.rs  sparklines.rs  tabs.rs
