[package]
name = "pgtop"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
chrono = "0.4"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
color-eyre = "0.6"
tokio-util = "0.7"

[dev-dependencies]
# cargo-husky прописывает git pre-commit hook в .git/hooks/ при сборке dev-профиля
# (включая `cargo test`). Конкретные команды лежат в .cargo-husky/hooks/pre-commit;
# user-hooks — отказ от стандартных хуков библиотеки в пользу наших.
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

[profile.release]
lto = "thin"
