[package]
name = "pgtop"
version = "0.1.8"
edition = "2024"
rust-version = "1.88"
authors = ["Andrii Karbanovich <andrey.karbanovich@icloud.com>"]
description = "TUI activity monitor for PostgreSQL — pg_stat_activity, locks, top queries and replication in one terminal pane"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tauvin/pgtop"
homepage = "https://github.com/tauvin/pgtop"
keywords = ["postgres", "postgresql", "tui", "monitor", "ratatui"]
categories = ["command-line-utilities", "database"]
exclude = [
    "/.cargo-husky",
    "/.claude",
    "/.idea",
    "/docs",
    "/scripts",
    "/docker-compose.yml",
]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tokio-postgres-rustls = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "1"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
figment = { version = "0.10", features = ["toml"] }
dirs = "5"
thiserror = "2"
color-eyre = "0.6"
tokio-util = "0.7"
tui-input = "0.10"
regex = "1"
strum = { version = "0.28", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# cargo-husky прописывает git pre-commit hook в .git/hooks/ при сборке dev-профиля
# (включая `cargo test`). Конкретные команды лежат в .cargo-husky/hooks/pre-commit;
# user-hooks — отказ от стандартных хуков библиотеки в пользу наших.
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
insta = "1"

[profile.release]
lto = "thin"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
